fixed spacing on home page

--- a/styles/explore.css
+++ b/styles/explore.css
@@ -268,4 +268,5 @@ footer{
 }
 footer a{
   color: white;
+  font-family: 'ZCOOL QingKe HuangYou', cursive;
 }
