--- a/styles/stories.css
+++ b/styles/stories.css
@@ -346,4 +346,5 @@ font-family: 'ZCOOL QingKe HuangYou', cursive;
 }
 footer a{
   color: white;
+  font-family: 'ZCOOL QingKe HuangYou', cursive;
 }
